shift slider down and ensure tick match theme
to address Issue #503

--- a/src/theme.less
+++ b/src/theme.less
@@ -295,6 +295,9 @@ md-select-menu md-option:focus:not([disabled]):not([selected]) {
     background-color: @widgetBackgroundColor;
     border-color: transparent;
 }
+.nr-dashboard-theme .nr-dashboard-slider md-slider .md-track-ticks {
+    color: @widgetBackgroundColor;
+}
 
 /* Switch */
 .nr-dashboard-theme .nr-dashboard-switch {}
